--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
         DOCKER_COMPOSE_VERSION: 1.28.0
         DOCKER_BUILDKIT: 1
       run: |
-        docker-compose build
+        docker-compose -f docker-compose.build.yml build
         docker-compose push
